# mestrado-rase

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE.md  README.md  citation.md  dataset.json  docker-compose.yml  generate.py  main.py  menu_generate.py  menu_validate.py  otimize.md  pyproject.toml  requirements.txt  resultados_llama.md  run.md  test.py
article/: Artigo.docx
artigo/: build.sh  cover-letter.docx  cover-letter.tex  credit-author-statement.docx  credit-author-statement.tex  declaration-of-interest.docx  declaration-of-interest.tex  fix_docx.py  main-ptbr.abs  main-ptbr.aux  main-ptbr.bbl  main-ptbr.blg  main-ptbr.fdb_latexmk  main-ptbr.fls  main-ptbr.tex  main.4tc  main.abs  main.aux  main.bbl  main.blg  main.docx  main.dvi  main.fdb_latexmk  main.fls  main.tex  main.xref  main_word.tex  preprocess_word.py  references.bib  ~$main.docx
config/: models.py  ollama.py
databases/: db_rase_n1.json  db_rase_n2.json
dissertacao/: Bibliografia.bib  Mestrado.sty  Modelo-Mestrado-PROCC.aux  Modelo-Mestrado-PROCC.bbl  Modelo-Mestrado-PROCC.blg  Modelo-Mestrado-PROCC.brf  Modelo-Mestrado-PROCC.fdb_latexmk  Modelo-Mestrado-PROCC.fls  Modelo-Mestrado-PROCC.ilg  Modelo-Mestrado-PROCC.lof  Modelo-Mestrado-PROCC.lot  Modelo-Mestrado-PROCC.tex  Modelo-Mestrado-PROCC.toc  dcomp-abntex2.cls  plan.md
docs/: dataset_schema.md
generates/: generate_n1.py  generate_n1_n2.py  generate_n1_n2_n3.py  generate_n1n2.py  generate_n1n2n3.py  generate_n2.py  generate_n2_n3.py  generate_n3.py  menu_generate.py
helpers/: txt_rase.txt
metrics/: test.ipynb  (+6 more)
(+276 files in other folders)
